--- a/frontend/views/carView.html
+++ b/frontend/views/carView.html
@@ -1,49 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <title>Home page</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="https://kit.fontawesome.com/e8b1622d27.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="../css/styles.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    
-</head>
 <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">CarMarket</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggler" aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarToggler">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Sell</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Login</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Register</a>
-                  </li>
-                </ul>
-                <form class="d-flex" role="search">
-                  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                  <button class="btn btn-outline-success" type="submit">Search</button>
-                </form>
-            </div>
-        </div>
-    </nav>
-    
     <div class="row">
         <div class="col-sm-4 col-12 offset-sm-3">
             <div class="card">
-                <img src="../assets/images/kodiaq.jpg" class="card-img-top" alt="carImage">
+                <img src="./assets/images/kodiaq.jpg" class="card-img-top" alt="carImage">
                 <div class="card-body" style="padding-bottom: 4px; padding-left: 0px; padding-right: 0px;">
                 <h5 class="card-title" style="border-bottom: solid; margin-bottom: 0px; padding-left: 8px;">Skoda Kodiaq VRS 4x4 2.0TDI</h5>
                 </div>
@@ -72,7 +31,7 @@
         <div class="col-sm-2 col-12">
             <div class="card">
                 <div class="card-body">
-                <h5 class="card-title"><i class="fa-solid fa-user me-2 fa-lg"></i>Seller</h5>
+                <a href="#profileView" style="text-decoration: none; color: black;"><h5 class="card-title"><i class="fa-solid fa-user me-2 fa-lg"></i>Seller</h5></a>
                 <h6 class="card-subtitle mb-2"><i class="fa-solid fa-location-dot me-2"></i>Kanton Sarajevo</h6>
                 <h6 class="card-subtitle mb-2"><i class="fa-solid fa-clock me-2"></i>Published: 22.03.2025 at 22:23</h6>
                 </div>
@@ -91,21 +50,4 @@
             <p class="text-break" style="border: solid; padding-left: 8px; padding-right: 8px;">gkasndasndajksddasdadadasgkasndasndajksddasdadadasgkasndasndajksddasdadadasgkasndasndajksddasdadadasgkasndasndajksddasdadadasgkasndasndajksddasdadadasgkasndasndajksddasdadadasgkasndasndajksddasdadadasgkasndasndajksddasdadadasgkasndasndajksddasdadadasgkasndasndajksddasdadadas</p>
         </div>
     </div>
-
-    <footer>
-      <div class="row d-flex justify-content-center bg-body-tertiary px-3 py-2">
-        <div class="col-sm-6 col-12">
-          <p>CarMarket. All rights reserved.</p>    
-        </div>
-        <div class="col-sm-6 col-12 text-end">
-          <button onclick="topFunction()" id="scrollToTopButton" title="Go to top">Scroll to top</button> 
-        </div>
-
-    </footer>    
-     
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <script src="../js/script.js"></script>
 </body>
-</html>
