Moved index.html to root

--- a/frontend/views/profileView.html
+++ b/frontend/views/profileView.html
@@ -14,7 +14,7 @@
             <div class="col-sm-3 col-12">
               <a href="#carView" style="text-decoration: none;">
                 <div class="card">
-                    <img src="./assets/images/kodiaq.jpg" class="card-img-top" alt="carImage">
+                    <img src="./frontend/assets/images/kodiaq.jpg" class="card-img-top" alt="carImage">
                     <div class="card-body">
                     <h5 class="card-title">Skoda Kodiaq VRS 4x4 2.0TDI</h5>
                     </div>
@@ -30,7 +30,7 @@
             </div>
             <div class="col-sm-3 col-12">
                 <div class="card">
-                    <img src="./assets/images/kodiaq.jpg" class="card-img-top" alt="carImage">
+                    <img src="./frontend/assets/images/kodiaq.jpg" class="card-img-top" alt="carImage">
                     <div class="card-body">
                     <h5 class="card-title">Skoda Kodiaq VRS 4x4 2.0TDI</h5>
                     </div>
@@ -45,7 +45,7 @@
             </div>
             <div class="col-sm-3 col-12">
                 <div class="card">
-                    <img src="./assets/images/kodiaq.jpg" class="card-img-top" alt="carImage">
+                    <img src="./frontend/assets/images/kodiaq.jpg" class="card-img-top" alt="carImage">
                     <div class="card-body">
                     <h5 class="card-title">Skoda Kodiaq VRS 4x4 2.0TDI</h5>
                     </div>
