--- a/frontend/views/carView.html
+++ b/frontend/views/carView.html
@@ -2,7 +2,7 @@
     <div class="row">
         <div class="col-sm-4 col-12 offset-sm-3">
             <div class="card">
-                <img src="./assets/images/kodiaq.jpg" class="card-img-top" alt="carImage">
+                <img src="frontend/assets/images/kodiaq.jpg" class="card-img-top" alt="carImage">
                 <div class="card-body" style="padding-bottom: 4px; padding-left: 0px; padding-right: 0px;">
                 <h5 class="card-title" style="border-bottom: solid; margin-bottom: 0px; padding-left: 8px;">Skoda Kodiaq VRS 4x4 2.0TDI</h5>
                 </div>
