--- a/frontend/views/listings.html
+++ b/frontend/views/listings.html
@@ -5,7 +5,7 @@
             <div class="col-sm-4 col-12">
                 <a href="#carView" style="text-decoration: none;">
                 <div class="card">
-                    <img src="./assets/images/kodiaq.jpg" class="card-img-top" alt="carImage">
+                    <img src="frontend/assets/images/kodiaq.jpg" class="card-img-top" alt="carImage">
                     <div class="card-body">
                     <h5 class="card-title">Skoda Kodiaq VRS 4x4 2.0TDI</h5>
                     </div>
@@ -22,7 +22,7 @@
             <div class="col-sm-4 col-12">
                 <a href="#carView" style="text-decoration: none;">
                 <div class="card">
-                    <img src="./assets/images/kodiaq.jpg" class="card-img-top" alt="carImage">
+                    <img src="frontend/assets/images/kodiaq.jpg" class="card-img-top" alt="carImage">
                     <div class="card-body">
                     <h5 class="card-title">Skoda Kodiaq VRS 4x4 2.0TDI</h5>
                     </div>
@@ -38,7 +38,7 @@
             </div>
             <div class="col-sm-4 col-12">
                 <div class="card">
-                    <img src="./assets/images/kodiaq.jpg" class="card-img-top" alt="carImage">
+                    <img src="frontend/assets/images/kodiaq.jpg" class="card-img-top" alt="carImage">
                     <div class="card-body">
                     <h5 class="card-title">Skoda Kodiaq VRS 4x4 2.0TDI</h5>
                     </div>
@@ -53,7 +53,7 @@
             </div>
             <div class="col-sm-4 col-12">
                 <div class="card">
-                    <img src="./assets/images/kodiaq.jpg" class="card-img-top" alt="carImage">
+                    <img src="frontend/assets/images/kodiaq.jpg" class="card-img-top" alt="carImage">
                     <div class="card-body">
                     <h5 class="card-title">Skoda Kodiaq VRS 4x4 2.0TDI</h5>
                     </div>
@@ -68,7 +68,7 @@
             </div>
             <div class="col-sm-4 col-12">
                 <div class="card">
-                    <img src="./assets/images/kodiaq.jpg" class="card-img-top" alt="carImage">
+                    <img src="frontend/assets/images/kodiaq.jpg" class="card-img-top" alt="carImage">
                     <div class="card-body">
                     <h5 class="card-title">Skoda Kodiaq VRS 4x4 2.0TDI</h5>
                     </div>
@@ -83,7 +83,7 @@
             </div>
             <div class="col-sm-4 col-12">
                 <div class="card">
-                    <img src="./assets/images/kodiaq.jpg" class="card-img-top" alt="carImage">
+                    <img src="frontend/assets/images/kodiaq.jpg" class="card-img-top" alt="carImage">
                     <div class="card-body">
                     <h5 class="card-title">Skoda Kodiaq VRS 4x4 2.0TDI</h5>
                     </div>
@@ -98,7 +98,7 @@
             </div>
             <div class="col-sm-4 col-12">
                 <div class="card">
-                    <img src="./assets/images/kodiaq.jpg" class="card-img-top" alt="carImage">
+                    <img src="frontend/assets/images/kodiaq.jpg" class="card-img-top" alt="carImage">
                     <div class="card-body">
                     <h5 class="card-title">Skoda Kodiaq VRS 4x4 2.0TDI</h5>
                     </div>
