Added messages, save listings and carousel

--- a/frontend/views/profileView.html
+++ b/frontend/views/profileView.html
@@ -9,7 +9,11 @@
                     <h6 class="card-subtitle mb-2"><i class="fa-solid fa-clock me-2"></i>Registered: 22.03.2025</h6>
                     </div>
                 </div>
+                <a href="#messages"><button type="button" class="btn btn-primary">My messages</button></a>
+                <a href="#savedListings"><button type="button" class="btn btn-success">Saved listings</button></a>
                 <button type="button" class="btn btn-danger">Logout</button>
+
+                
             </div>
             <div class="col-sm-3 col-12">
               <a href="#carView" style="text-decoration: none;">
