--- a/frontend/views/carView.html
+++ b/frontend/views/carView.html
@@ -2,7 +2,27 @@
     <div class="row">
         <div class="col-sm-4 col-12 offset-sm-3">
             <div class="card">
-                <img src="frontend/assets/images/kodiaq.jpg" class="card-img-top" alt="carImage">
+              <div id="carouselCar" class="carousel slide">
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img src="frontend/assets/images/kodiaq.jpg" class="d-block w-100" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="frontend/assets/images/kodiaq.jpg" class="d-block w-100" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="frontend/assets/images/kodiaq.jpg" class="d-block w-100" alt="...">
+                  </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselCar" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselCar" data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
+              </div>
                 <div class="card-body" style="padding-bottom: 4px; padding-left: 0px; padding-right: 0px;">
                 <h5 class="card-title" style="border-bottom: solid; margin-bottom: 0px; padding-left: 8px;">Skoda Kodiaq VRS 4x4 2.0TDI</h5>
                 </div>
@@ -37,8 +57,34 @@
                 </div>
             </div>
             <div class="row">
-                <span class="border-top"></span>
+                
                 <h4><i class="fa-solid fa-money-bill me-2"></i>Price: 60000 KM</h4>
+                <h4><i class="fa-solid fa-heart me-2"></i>Save listing</h4>
+  
+                
+                <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#ModalMessage">
+                  Send message
+                </button>
+
+                <div class="modal fade" id="ModalMessage" tabindex="-1" aria-labelledby="ModalMessage" aria-hidden="true">
+                  <div class="modal-dialog">
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <h5 class="modal-title" id="ModalMessage">Send message</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                      </div>
+                      <div class="modal-body">
+                        <form>
+                          <textarea rows="5" style="min-width: 100%;"></textarea>
+                        </form>
+                      </div>
+                      <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Discard</button>
+                        <button type="button" class="btn btn-primary">Send message</button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
                 <span class="border-bottom"></span>
             </div>
         </div>
