--- a/frontend/views/messages.html
+++ b/frontend/views/messages.html
@@ -9,7 +9,7 @@
                     <h6 class="card-subtitle mb-2"><i class="fa-solid fa-clock me-2"></i>Registered: 22.03.2025</h6>
                     </div>
                 </div>
-                <a href="#messages"><button type="button" class="btn btn-primary">My messages</button></a>
+                <a href="#profileView"><button type="button" class="btn btn-primary">Go back</button></a>
                 <a href="#savedListings"><button type="button" class="btn btn-success">Saved listings</button></a>
                 <button type="button" class="btn btn-danger">Logout</button>
             </div>
